--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ androidxBrowser = "1.4.0"
 
 compose = "1.4.2"
 composeCompiler = "1.4.6"
+composeHtml = "1.3.1"
+constraintlayoutCompose = "1.0.1"
 material = "1.2.1"
 material3 = "1.0.1"
 okhttp3 = "4.10.0"
@@ -74,6 +76,9 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 
+compose-html = { module = "de.charlex.compose:html-text", version.ref = "composeHtml" }
+constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
+
 ktor-client-core = {module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
@@ -89,6 +94,8 @@ androidx-startup-runtime = { module = "androidx.startup:startup-runtime", versio
 mmkv = { module = "com.tencent:mmkv", version.ref = "mmkv" }
 
 org-jetbrains-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
+
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 
