--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
 
-androidxCore = "1.9.0"
-androidxLifecycle = "2.6.0-alpha02"
-androidxActivity = "1.6.0"
-androidxTestExt = "1.1.3"
-androidxTestEspresso = "3.4.0"
+androidxCore = "1.10.0"
+androidxLifecycle = "2.6.1"
+androidxActivity = "1.7.1"
+androidxTestExt = "1.1.5"
+androidxTestEspresso = "3.5.1"
 androidxNavigation = "2.5.3"
 androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
-androidxBrowser = "1.4.0"
+androidxBrowser = "1.5.0"
 
 compose = "1.4.2"
 composeCompiler = "1.4.6"
 composeHtml = "1.3.1"
 constraintlayoutCompose = "1.0.1"
-material = "1.2.1"
+material = "1.4.2"
 material3 = "1.0.1"
 okhttp3 = "4.10.0"
 retrofit2 = "2.9.0"
@@ -22,7 +22,7 @@ kotlinxSerializationConverter = "0.8.0"
 loggingInterceptor = "4.10.0"
 
 kotlinxDatetime = "0.4.0"
-kotlinxSerializationJson = "1.4.1"
+kotlinxSerializationJson = "1.5.0"
 kotlin = "1.8.20"
 ktor = "2.3.0"
 
@@ -32,8 +32,8 @@ coil = "2.2.1"
 mmkv = "1.2.14"
 hilt = "2.44"
 pagingRuntime = "3.1.1"
-pagingCompose = "1.0.0-alpha16"
-splashScreen = "1.0.0"
+pagingCompose = "1.0.0-alpha18"
+splashScreen = "1.0.1"
 junit = "4.13.2"
 
 [libraries]
