--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 
-compose = "1.4.2"
+compose = "1.5.0-alpha03"
 composeCompiler = "1.4.6"
 composeHtml = "1.3.1"
 constraintlayoutCompose = "1.0.1"
