--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 
-androidxCore = "1.10.0"
+androidxCore = "1.10.1"
 androidxLifecycle = "2.6.1"
 androidxActivity = "1.7.1"
 androidxTestExt = "1.1.5"
@@ -10,14 +10,15 @@ androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 
-compose = "1.5.0-alpha03"
+compose = "1.5.0-alpha04"
 composeCompiler = "1.4.6"
 composeHtml = "1.3.1"
 constraintlayoutCompose = "1.0.1"
 material = "1.4.3"
-material3 = "1.0.1"
+material3 = "1.1.0"
 okhttp3 = "4.10.0"
 retrofit2 = "2.9.0"
+room = "2.5.1"
 kotlinxSerializationConverter = "0.8.0"
 loggingInterceptor = "4.10.0"
 
@@ -85,6 +86,11 @@ coil-video = { module = "io.coil-kt:coil-video", version.ref = "coil" }
 
 compose-html = { module = "de.charlex.compose:html-text", version.ref = "composeHtml" }
 constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
+
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 
 ktor-client-core = {module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
