Refactor: 1. Refactored the network request section. 2. Used a database instead of temporary cache to store information for multiple accounts. Feat: Added a simple unit test for network requests, improved the accuracy of timeline position storage by adding an offset, although there are still instances where it may not be accurate

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,16 +21,19 @@ retrofit2 = "2.9.0"
 room = "2.5.1"
 kotlinxSerializationConverter = "0.8.0"
 loggingInterceptor = "4.11.0"
+networkresultCalladapter = "1.0.0"
 
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.5.0"
+kotlinxCoroutines = "1.7.1"
 kotlin = "1.8.20"
-ktor = "2.3.0"
 
 agp = "7.4.2"
 accompanist = "0.25.1"
 coil = "2.3.0"
 mmkv = "1.2.14"
+mockk = "1.13.5"
+mockitoKotlin = "5.0.0"
 ksp = "1.8.20-1.0.11"
 lottie = "6.0.0"
 composeDestinations = "1.9.42-beta"
@@ -74,9 +77,10 @@ accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiper
 accompanist-placeholder-material = { module = "com.google.accompanist:accompanist-placeholder-material", version.ref = "accompanist" }
 
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
+okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
 kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "kotlinxSerializationConverter" }
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+networkresult-calladapter = { module = "at.connyduck:networkresult-calladapter", version.ref = "networkresultCalladapter" }
 
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
@@ -92,19 +96,16 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 
-ktor-client-core = {module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
-ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
-ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
-ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
-
 com-google-dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHilt" }
 com-google-dagger-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 
 androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
 mmkv = { module = "com.tencent:mmkv", version.ref = "mmkv" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
+mockk = { module = "io.mockk:mockk-android", version.ref = "mockk" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
+
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 zoomable = { module = "com.mxalbert.zoomable:zoomable", version.ref = "zoomable" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
@@ -113,6 +114,7 @@ compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:
 
 org-jetbrains-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
