--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 
-compose = "1.5.0-beta01"
+compose = "1.5.0-beta02"
 composeCompiler = "1.4.6"
 composeHtml = "1.3.1"
 constraintlayoutCompose = "1.0.1"
@@ -29,17 +29,17 @@ kotlinxCoroutines = "1.7.1"
 kotlin = "1.8.20"
 
 agp = "7.4.2"
-accompanist = "0.25.1"
-coil = "2.3.0"
-mmkv = "1.2.14"
+accompanist = "0.30.1"
+coil = "2.4.0"
+mmkv = "1.2.15"
 mockk = "1.13.5"
 mockitoKotlin = "5.0.0"
 ksp = "1.8.20-1.0.11"
 lottie = "6.0.0"
 composeDestinations = "1.9.42-beta"
 hilt = "2.45"
-pagingRuntime = "3.2.0-alpha06"
-pagingCompose = "1.0.0-alpha20"
+pagingRuntime = "3.2.0-beta01"
+pagingCompose = "3.2.0-beta01"
 splashScreen = "1.0.1"
 junit = "4.13.2"
 jsoup = "1.16.1"
@@ -111,6 +111,7 @@ jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 zoomable = { module = "com.mxalbert.zoomable:zoomable", version.ref = "zoomable" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 compose-destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
+compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeDestinations" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
 
 org-jetbrains-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
