--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,17 +5,17 @@ androidxLifecycle = "2.6.1"
 androidxActivity = "1.7.2"
 androidxTestExt = "1.1.5"
 androidxTestEspresso = "3.5.1"
-androidxNavigation = "2.5.3"
+androidxNavigation = "2.6.0"
 androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 
-compose = "1.5.0-beta02"
+compose = "1.6.0-alpha01"
 composeCompiler = "1.4.6"
 composeHtml = "1.3.1"
 constraintlayoutCompose = "1.0.1"
-material = "1.4.3"
-material3 = "1.1.0"
+material = "1.6.0-alpha01"
+material3 = "1.2.0-alpha03"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
 room = "2.5.1"
