--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 
 compose = "1.6.0-alpha01"
-composeCompiler = "1.4.6"
+composeCompiler = "1.5.0-dev-k1.9.0-6a60475e07f"
 constraintlayoutCompose = "1.0.1"
 material = "1.6.0-alpha01"
 material3 = "1.2.0-alpha03"
@@ -26,7 +26,7 @@ kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.5.1"
 kotlinxCollections = "0.3.5"
 kotlinxCoroutines = "1.7.1"
-kotlin = "1.8.20"
+kotlin = "1.9.0"
 
 agp = "8.1.0-alpha11"
 accompanist = "0.30.1"
@@ -34,9 +34,9 @@ coil = "2.4.0"
 mmkv = "1.2.15"
 mockk = "1.13.5"
 mockitoKotlin = "5.0.0"
-ksp = "1.8.20-1.0.11"
+ksp = "1.9.0-1.0.11"
 lottie = "6.0.0"
-composeDestinations = "1.9.42-beta"
+composeDestinations = "1.9.50"
 hilt = "2.46.1"
 pagingRuntime = "3.2.0-rc01"
 pagingCompose = "3.2.0-rc01"
@@ -108,7 +108,6 @@ jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 zoomable = { module = "com.mxalbert.zoomable:zoomable", version.ref = "zoomable" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 compose-destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
-compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeDestinations" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
 
 org-jetbrains-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
@@ -125,3 +124,4 @@ hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", 
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
