--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
-    <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:enableOnBackInvokedCallback="true"
-        android:name=".mastify.MastifyApp"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Mastify"
-        tools:targetApi="33">
+  <application
+    android:name=".mastify.MastifyApp"
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:enableOnBackInvokedCallback="true"
+    android:fullBackupContent="@xml/backup_rules"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.Mastify"
+    tools:targetApi="33">
+    <profileable
+      android:shell="true"
+      tools:targetApi="34"/>
 
-        <provider
-            android:authorities="com.github.whitescent.mastify.androidx-startup"
-            android:name="androidx.startup.InitializationProvider"
-            tools:node="merge"
-            android:exported="false">
-            <meta-data
-                android:name="com.github.whitescent.mastify.MastifyInitializer"
-                android:value="androidx.startup"/>
-        </provider>
+    <provider
+      android:name="androidx.startup.InitializationProvider"
+      android:authorities="com.github.whitescent.mastify.androidx-startup"
+      android:exported="false"
+      tools:node="merge">
+      <meta-data
+        android:name="com.github.whitescent.mastify.MastifyInitializer"
+        android:value="androidx.startup" />
+    </provider>
 
-        <activity
-            android:name=".mastify.MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Mastify">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <data android:scheme="mastify" android:host="oauth"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-            </intent-filter>
-        </activity>
-    </application>
+    <activity
+      android:name=".mastify.MainActivity"
+      android:exported="true"
+      android:theme="@style/Theme.Mastify">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <data
+          android:host="oauth"
+          android:scheme="mastify" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
