--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ mockk = "1.13.5"
 mockitoKotlin = "5.0.0"
 ksp = "1.9.0-1.0.11"
 lottie = "6.0.0"
+leakcanary = "2.12"
 composeDestinations = "1.9.50"
 hilt = "2.46.1"
 pagingRuntime = "3.2.0-rc01"
@@ -112,6 +113,7 @@ mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 zoomable = { module = "com.mxalbert.zoomable:zoomable", version.ref = "zoomable" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 compose-destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
 compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
 
