feat: Add profile page

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidxBrowser = "1.5.0"
 androidDesugar = "2.0.3"
 
 compose = "1.6.0-alpha01"
-composeCompiler = "1.5.0-dev-k1.9.0-6a60475e07f"
+composeCompiler = "1.5.0"
 constraintlayoutCompose = "1.0.1"
 material = "1.6.0-alpha01"
 material3 = "1.2.0-alpha03"
@@ -29,7 +29,7 @@ kotlinxCollections = "0.3.5"
 kotlinxCoroutines = "1.7.1"
 kotlin = "1.9.0"
 
-agp = "8.2.0-alpha12"
+agp = "8.2.0-alpha13"
 accompanist = "0.30.1"
 coil = "2.4.0"
 mmkv = "1.2.15"
