--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,11 +11,11 @@ androidxStartup = "1.1.1"
 androidxBrowser = "1.5.0"
 androidDesugar = "2.0.3"
 
-compose = "1.6.0-alpha01"
+compose = "1.6.0-alpha02"
 composeCompiler = "1.5.0"
 constraintlayoutCompose = "1.0.1"
-material = "1.6.0-alpha01"
-material3 = "1.2.0-alpha03"
+material = "1.6.0-alpha02"
+material3 = "1.2.0-alpha04"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
 room = "2.5.2"
@@ -40,14 +40,14 @@ lottie = "6.0.0"
 leakcanary = "2.12"
 composeDestinations = "1.9.50"
 hilt = "2.46.1"
-pagingRuntime = "3.2.0-rc01"
-pagingCompose = "3.2.0-rc01"
+pagingRuntime = "3.2.0"
+pagingCompose = "3.2.0"
 splashScreen = "1.0.1"
 junit = "4.13.2"
 jsoup = "1.16.1"
 zoomable = "1.6.0"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.0-alpha16"
+benchmark-macro-junit4 = "1.2.0-beta02"
 profileinstaller = "1.3.1"
 
 [libraries]
