--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
     <activity
       android:name=".mastify.MainActivity"
       android:exported="true"
+      android:windowSoftInputMode="adjustResize"
       android:theme="@style/Theme.Mastify">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
