--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 
-androidxCore = "1.10.1"
-androidxLifecycle = "2.6.1"
-androidxActivity = "1.7.2"
+androidxCore = "1.12.0"
+androidxLifecycle = "2.6.2"
+androidxActivity = "1.8.0-rc01"
 androidxTestExt = "1.1.5"
 androidxTestEspresso = "3.5.1"
 androidxNavigation = "2.7.2"
@@ -12,10 +12,10 @@ androidxMedia3 = "1.1.1"
 androidxBrowser = "1.6.0"
 androidDesugar = "2.0.3"
 
-compose = "1.6.0-alpha05"
+compose = "1.6.0-alpha06"
 composeCompiler = "1.5.1"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-alpha07"
+material3 = "1.2.0-alpha08"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
 room = "2.5.2"
@@ -31,7 +31,6 @@ kotlin = "1.9.0"
 ktsoup = "0.3.0"
 
 agp = "8.2.0-alpha15"
-accompanist = "0.32.0"
 coil = "2.4.0"
 media = "0.4.0"
 mmkv = "1.2.15"
@@ -49,7 +48,7 @@ junit = "4.13.2"
 jsoup = "1.16.1"
 zoomable = "1.6.0"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.0-beta05"
+benchmark-macro-junit4 = "1.2.0-rc01"
 profileinstaller = "1.3.1"
 monitor = "1.6.1"
 junitKtx = "1.1.5"
@@ -81,8 +80,6 @@ androidx-compose-material-icons-extended = { module = "androidx.compose.material
 
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
-
-accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
 okhttp3-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp3" }
