--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,23 +2,23 @@
 
 androidxCore = "1.12.0"
 androidxLifecycle = "2.6.2"
-androidxActivity = "1.8.0-rc01"
+androidxActivity = "1.8.0"
 androidxTestExt = "1.1.5"
 androidxTestEspresso = "3.5.1"
-androidxNavigation = "2.7.2"
+androidxNavigation = "2.7.4"
 androidxHilt = "1.0.0"
 androidxStartup = "1.1.1"
 androidxMedia3 = "1.1.1"
 androidxBrowser = "1.6.0"
 androidDesugar = "2.0.3"
 
-compose = "1.6.0-alpha06"
+compose = "1.6.0-alpha08"
 composeCompiler = "1.5.1"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-alpha08"
+material3 = "1.2.0-alpha10"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
-room = "2.5.2"
+room = "2.6.0"
 kotlinxSerializationConverter = "1.0.0"
 loggingInterceptor = "4.11.0"
 networkresultCalladapter = "1.0.0"
@@ -48,7 +48,7 @@ junit = "4.13.2"
 jsoup = "1.16.1"
 zoomable = "1.6.0"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.0-rc01"
+benchmark-macro-junit4 = "1.2.0"
 profileinstaller = "1.3.1"
 monitor = "1.6.1"
 junitKtx = "1.1.5"
