--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.Mastify"
+    android:theme="@style/Theme.Mastify.Splash"
     tools:targetApi="33">
     <profileable
       android:shell="true"
@@ -51,7 +51,7 @@
       android:name=".mastify.MainActivity"
       android:exported="true"
       android:windowSoftInputMode="adjustResize"
-      android:theme="@style/Theme.Mastify">
+      android:theme="@style/Theme.Mastify.Splash">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
