--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,14 +9,14 @@ androidxNavigation = "2.7.5"
 androidxHilt = "1.1.0"
 androidxStartup = "1.1.1"
 androidxMedia3 = "1.1.1"
-androidxBrowser = "1.6.0"
+androidxBrowser = "1.7.0"
 androidDesugar = "2.0.4"
 
-compose = "1.6.0-alpha08"
+compose = "1.6.0-beta01"
 composeCompiler = "1.5.1"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-alpha10"
+material3 = "1.2.0-alpha11"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
 room = "2.6.0"
@@ -49,7 +49,7 @@ robolectric = "4.11.1"
 jsoup = "1.16.1"
 zoomable = "1.6.0"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.0"
+benchmark-macro-junit4 = "1.2.1"
 profileinstaller = "1.3.1"
 monitor = "1.6.1"
 junitKtx = "1.1.5"
