--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,18 +8,18 @@ androidxTestEspresso = "3.5.1"
 androidxNavigation = "2.7.5"
 androidxHilt = "1.1.0"
 androidxStartup = "1.1.1"
-androidxMedia3 = "1.1.1"
+androidxMedia3 = "1.2.0"
 androidxBrowser = "1.7.0"
 androidDesugar = "2.0.4"
 
-compose = "1.6.0-alpha08"
-composeCompiler = "1.5.1"
+compose = "1.6.0-beta02"
+composeCompiler = "1.5.5"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-alpha11"
+material3 = "1.2.0-alpha12"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
-room = "2.6.0"
+room = "2.6.1"
 kotlinxSerializationConverter = "1.0.0"
 loggingInterceptor = "4.11.0"
 networkresultCalladapter = "1.0.0"
@@ -28,19 +28,19 @@ kotlinxDatetime = "0.4.1"
 kotlinxSerializationJson = "1.5.1"
 kotlinxCollections = "0.3.5"
 kotlinxCoroutines = "1.7.3"
-kotlin = "1.9.0"
+kotlin = "1.9.20"
 ktsoup = "0.3.0"
 
 agp = "8.3.0-alpha11"
 coil = "2.4.0"
 media = "0.4.0"
-mmkv = "1.2.15"
+mmkv = "1.3.2"
 mockk = "1.13.5"
 mockitoKotlin = "5.0.0"
-ksp = "1.9.0-1.0.13"
+ksp = "1.9.20-1.0.14"
 lottie = "6.0.0"
 leakcanary = "2.12"
-composeDestinations = "1.9.52"
+composeDestinations = "1.9.55"
 hilt = "2.46"
 paging3 = "3.2.1"
 splashScreen = "1.0.1"
@@ -49,7 +49,7 @@ robolectric = "4.11.1"
 jsoup = "1.16.1"
 zoomable = "1.6.0"
 uiautomator = "2.2.0"
-benchmark-macro-junit4 = "1.2.1"
+benchmark-macro-junit4 = "1.2.2"
 profileinstaller = "1.3.1"
 monitor = "1.6.1"
 junitKtx = "1.1.5"
