--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,11 @@ androidxMedia3 = "1.2.0"
 androidxBrowser = "1.7.0"
 androidDesugar = "2.0.4"
 
-compose = "1.6.0-beta02"
+compose = "1.6.0-alpha08"
 composeCompiler = "1.5.5"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-alpha12"
+material3 = "1.2.0-alpha11"
 okhttp3 = "4.11.0"
 retrofit2 = "2.9.0"
 room = "2.6.1"
@@ -35,6 +35,7 @@ agp = "8.3.0-alpha11"
 coil = "2.4.0"
 media = "0.4.0"
 mmkv = "1.3.2"
+fluentui = "0.1.41"
 mockk = "1.13.5"
 mockitoKotlin = "5.0.0"
 ksp = "1.9.20-1.0.14"
@@ -95,6 +96,7 @@ coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
 coil-video = { module = "io.coil-kt:coil-video", version.ref = "coil" }
+fluentui = { group = "com.microsoft.fluentui", name = "FluentUIAndroid", version.ref = "fluentui" }
 
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 logcat = { module = "com.squareup.logcat:logcat", version.ref = "logcat" }
