--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,7 +48,7 @@ splashScreen = "1.0.1"
 junit = "4.13.2"
 robolectric = "4.11.1"
 jsoup = "1.16.1"
-zoomable = "1.6.0"
+zoomimage = "1.0.0-beta10"
 uiautomator = "2.2.0"
 benchmark-macro-junit4 = "1.2.2"
 profileinstaller = "1.3.1"
@@ -124,7 +124,7 @@ mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
 
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 compose-media = { module = "com.github.fengdai.compose:media", version.ref = "media" }
-zoomable = { module = "com.mxalbert.zoomable:zoomable", version.ref = "zoomable" }
+zoomable = { module = "io.github.panpf.zoomimage:zoomimage-compose-coil", version.ref = "zoomimage" }
 lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary" }
 compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeDestinations" }
