--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidxMedia3 = "1.2.0"
 androidxBrowser = "1.7.0"
 androidDesugar = "2.0.4"
 
-compose = "1.6.0-alpha08"
+compose = "1.6.0-beta03"
 composeCompiler = "1.5.5"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
@@ -35,13 +35,13 @@ agp = "8.3.0-alpha11"
 coil = "2.4.0"
 media = "0.4.0"
 mmkv = "1.3.2"
-fluentui = "0.1.41"
+fluentui = "0.1.44"
 mockk = "1.13.5"
 mockitoKotlin = "5.1.0"
 ksp = "1.9.20-1.0.14"
 lottie = "6.0.0"
 leakcanary = "2.12"
-composeDestinations = "1.9.55"
+composeDestinations = "1.9.57"
 hilt = "2.46"
 paging3 = "3.2.1"
 splashScreen = "1.0.1"
