--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,11 @@ androidxMedia3 = "1.2.1"
 androidxBrowser = "1.7.0"
 androidDesugar = "2.0.4"
 
-compose = "1.6.0-rc01"
+compose = "1.7.0-alpha01"
 composeCompiler = "1.5.8"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-beta02"
+material3 = "1.2.0-rc01"
 okhttp3 = "4.12.0"
 retrofit2 = "2.9.0"
 room = "2.6.1"
