--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidxHilt = "1.1.0"
 androidxStartup = "1.1.1"
 androidxMedia3 = "1.2.1"
 androidxBrowser = "1.7.0"
+androidxWindow = "1.2.0"
 androidDesugar = "2.0.4"
 
 compose = "1.7.0-alpha01"
@@ -73,6 +74,7 @@ junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxTestEspresso" }
 android-desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "androidDesugar" }
+androidx-window = { group = "androidx.window", name = "window", version.ref = "androidxWindow" }
 
 androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
