feat: implementation other notification events

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ compose = "1.7.0-alpha02"
 composeCompiler = "1.5.8"
 composeShadowsPlus = "1.0.4"
 constraintlayoutCompose = "1.0.1"
-material3 = "1.2.0-rc01"
+material3 = "1.2.0"
 okhttp3 = "4.12.0"
 retrofit2 = "2.9.0"
 room = "2.6.1"
