feat: Integrate the Google Firebase Analytics library

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ local.properties
 .idea/*
 /app/release
 /app/schemas/com.github.whitescent.mastify.timeline.TestAppDatabase/*
+google-services.json
+google-services.json
