--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,17 +40,21 @@ mmkv = "1.3.2"
 mockk = "1.13.8"
 mockitoKotlin = "5.1.0"
 lottie = "6.0.0"
+work = "2.9.0"
 leakcanary = "2.12"
 composeDestinations = "1.10.0"
 hilt = "2.50"
 haze = "0.5.2"
+googleServices = "4.4.1"
+firebase = "32.7.3"
+firebaseCrashlyticsPlugin = "2.9.9"
 paging3 = "3.2.1"
 splashScreen = "1.0.1"
 junit = "4.13.2"
 robolectric = "4.11.1"
 jsoup = "1.16.1"
 zoomimage = "1.0.0-beta10"
-uiautomator = "2.2.0"
+uiautomator = "2.3.0"
 benchmark-macro-junit4 = "1.2.3"
 profileinstaller = "1.3.1"
 monitor = "1.6.1"
@@ -142,6 +146,9 @@ kotlinx-collections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immu
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "paging3" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging3" }
 
+work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work" }
+work-testing = { module = "androidx.work:work-testing", version.ref = "work" }
+
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
@@ -150,7 +157,12 @@ benchmark-macro-junit4 = { group = "androidx.benchmark", name = "benchmark-macro
 profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstaller" }
 androidx-monitor = { group = "androidx.test", name = "monitor", version.ref = "monitor" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugin" }
