--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,8 @@ androidxLifecycle = "2.7.0"
 androidxActivity = "1.8.2"
 androidxTestExt = "1.1.5"
 androidxTestEspresso = "3.5.1"
-androidxNavigation = "2.7.6"
-androidxHilt = "1.1.0"
+androidxNavigation = "2.7.7"
+androidxHilt = "1.2.0"
 androidxStartup = "1.1.1"
 androidxMedia3 = "1.2.1"
 androidxBrowser = "1.7.0"
@@ -33,7 +33,7 @@ kotlin = "1.9.22"
 ksp = "1.9.22-1.0.17"
 ktsoup = "0.3.0"
 
-agp = "8.3.0-alpha11"
+agp = "8.3.0"
 coil = "2.4.0"
 media = "0.4.0"
 mmkv = "1.3.2"
