--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,14 +20,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # Set Repository Name As Env Variable
       - name: Set repository name as env variable
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
 
       - name: Set Up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
@@ -37,12 +37,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Add google-services.json
-        id: create-json
-        uses: jsdaniell/create-json@v1.2.3
-        with:
-          name: "google-services.json"
-          json: ${{ secrets.GOOGLE_SERVICES }}
-          dir: "app/"
+        run: mv app/google-services-sample.json app/google-services.json
 
       # Run Build Project
       - name: Build gradle project
