feat: implementation timed pruning of data for timelines

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
       android:exported="false"
       tools:node="merge">
       <meta-data
+        android:name="androidx.work.WorkManagerInitializer"
+        android:value="androidx.startup"
+        tools:node="remove" />
+      <meta-data
         android:name="com.github.whitescent.mastify.MastifyInitializer"
         android:value="androidx.startup" />
     </provider>
