--- a/.editorconfig
+++ b/.editorconfig
@@ -1,45 +1,28 @@
-# Refers: https://EditorConfig.org
-root = true
-
 [*]
 charset = utf-8
 end_of_line = lf
-max_line_length = 100
-tab_width = 2
 indent_size = 2
 indent_style = space
-insert_final_newline = true
-trim_trailing_whitespace = true
+insert_final_newline = false
+max_line_length = 120
+tab_width = 2
 ij_continuation_indent_size = 2
-ij_any_keep_indents_on_empty_lines = false
+ij_formatter_off_tag = @formatter:off
+ij_formatter_on_tag = @formatter:on
+ij_formatter_tags_enabled = false
+ij_smart_tabs = false
+ij_visual_guides = none
+ij_wrap_on_typing = false
 
-[{gradle.properties,*.versions.toml}]
-max_line_length = off
-
-[*.{kt,kts}]
-ij_kotlin_align_multiline_extends_list = true
-ij_kotlin_align_multiline_parameters = true
-ij_kotlin_align_multiline_parameters_in_calls = true
-ij_kotlin_allow_trailing_comma = true
-ij_kotlin_allow_trailing_comma_on_call_site = true
-ij_kotlin_call_parameters_new_line_after_left_paren = false
-ij_kotlin_call_parameters_right_paren_on_new_line = false
-ij_kotlin_call_parameters_wrap = on_every_item
-ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
-ij_kotlin_enum_constants_wrap = normal
-ij_kotlin_extends_list_wrap = normal
-ij_kotlin_field_annotation_wrap = normal
-ij_kotlin_if_rparen_on_new_line = true
-ij_kotlin_imports_layout = *,java.**,javax.**,kotlin.**,^
-ij_kotlin_insert_whitespaces_in_simple_one_line_method = true
-ij_kotlin_keep_line_breaks = true
-ij_kotlin_line_comment_add_space = true
-ij_kotlin_line_comment_add_space_on_reformat = true
-ij_kotlin_line_comment_at_first_column = false
-ij_kotlin_method_annotation_wrap = normal
-ij_kotlin_method_call_chain_wrap = normal
-ij_kotlin_method_parameters_new_line_after_left_paren = true
-ij_kotlin_method_parameters_right_paren_on_new_line = true
-ij_kotlin_method_parameters_wrap = on_every_item
-ij_kotlin_variable_annotation_wrap = normal
-ij_kotlin_wrap_first_method_in_call_chain = false
+[{*.kt,*.kts}]
+ktlint_code_style = android_studio
+ktlint_standard = enabled
+ktlint_experimental = enabled
+ktlint_standard_argument-list-wrapping = disabled
+no_line_break_before_assignment = off
+ktlint_function_naming_ignore_when_annotated_with = Composable
+ktlint_standard_property-naming = disabled
+ktlint_standard_function-naming = disabled
+ktlint_standard_max-line-length = disabled
+ktlint_standard_binary-expression-wrapping = disabled
+ktlint_standard_class-signature = disabled
