--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,12 +26,29 @@ jobs:
       - name: Set repository name as env variable
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
 
+      - name: Write value to Properties-file
+        env:
+          MASTODON_USERNAME: ${{ secrets.MASTODON_USERNAME }}
+          MASTODON_PASSWORD: ${{ secrets.MASTODON_PASSWORD }}
+          MASTODON_SITE: ${{ secrets.MASTODON_SITE }}
+        run: |
+          echo "MASTODON_USERNAME=$MASTODON_USERNAME" >> ./app/benchmark/mastodon.properties
+          echo "MASTODON_PASSWORD=$MASTODON_PASSWORD" >> ./app/benchmark/mastodon.properties
+          echo "MASTODON_SITE=$MASTODON_SITE" >> ./app/benchmark/mastodon.properties
+
       - name: Set Up JDK
         uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
           cache: "gradle"
+
+      # Required for Setting Up Benchmarks
+      # - name: Enable KVM
+      #   run: |
+      #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+      #     sudo udevadm control --reload-rules
+      #     sudo udevadm trigger --name-match=kvm
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
@@ -47,4 +64,15 @@ jobs:
       - name: Run gradle tests
         run: ./gradlew app:testDebugUnitTest
 
-      # TODO: setup benchmarks
+      # Setup benchmarks
+      # https://github.com/ReactiveCircus/android-emulator-runner/issues/161#issuecomment-1248757074
+      # - name: Run benchmarks
+      #   env:
+      #     MASTODON_USERNAME: ${{ secrets.MASTODON_USERNAME }}
+      #     MASTODON_PASSWORD: ${{ secrets.MASTODON_PASSWORD }}
+      #     MASTODON_SITE: ${{ secrets.MASTODON_SITE }}
+      #   uses: reactivecircus/android-emulator-runner@v2
+      #   with:
+      #     api-level: 34
+      #     # restart adb to fix broken emulator
+      #     script: adb kill-server && adb start-server && ./gradlew app:benchmark:connectedBenchmarkAndroidTest
