--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ local.properties
 /app/release
 /app/schemas/com.github.whitescent.mastify.timeline.TestAppDatabase/*
 google-services.json
+/app/benchmark/mastodon-sample.properties
 /app/benchmark/mastodon.properties
